# Horrorscopes-Backend

./: db.sqlite3  manage.py  pyproject.toml
horrorscopes/: admin.py  asgi.py  models.py  serializers.py  settings.py  urls.py  views.py  wsgi.py
horrorscopes/migrations/: 0001_initial.py
